--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 body {
-    font-family: "Open Sans", sans-serif;
+    font-family: Helvetica, Tahoma, Verdana, sans-serif;
 }
 
 h1, h2, h3 {
-    font-family: "Lobster", cursive;
+    font-family: "Italianno";
 }
 
 h2 {
@@ -11,18 +11,18 @@ h2 {
 }
 
 header h2 {
-    color: #CEC8FF;
+    color: #020014;
 }
 
 .site-footer {
-    background-image: linear-gradient(#CEC8FF, white);
+    background-image: linear-gradient(#8D89A5, white);
     padding: 20px 0;
 }
 
 .jumbotron {
     margin: 0;
-    padding: 50px 0;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+    padding: 30px 0;
+    background-image: linear-gradient(to right, #8D89A5, #3CB371, #48D1CC);
     color: white;
 }
 
@@ -32,8 +32,9 @@ header h2 {
     min-height: 200px;
 }
 
-.navbar {
-    background-color: #901CAD;
+.row-content-2 {
+    padding: 50px 0;
+    min-height: 200px;
 }
 
 /* .tab-content {
@@ -52,6 +53,9 @@ a, a:hover {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.carousel {
-    border: solid #0c9292;
+img {
+    border-radius: 25px;
+    border-style: inset;
+    border-color:  #93c2a7;
+    border-width:2px;
 }
